# fdb

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  cspell.json
buff/: Cargo.toml
buff/src/: impls.rs  lib.rs
docs/: code-conventions.md  drafts.md  spec.md
fdb/: Cargo.toml
fdb-cli/: Cargo.toml
fdb-cli/src/: main.rs
fdb/src/: catalog.rs  config.rs  db.rs  error.rs  exec.rs  lib.rs  pager.rs
fdb/src/catalog/: column.rs  object.rs  page.rs  record.rs  table_schema.rs  ty.rs
fdb/src/catalog/page/: b_tree.rs  first.rs  heap.rs
fdb/src/catalog/record/: simple_record.rs
fdb/src/exec/: common.rs  insert.rs  object.rs  operations.rs  query.rs  select.rs  serde.rs  value.rs  values.rs
fdb/src/exec/operations/heap/: seq_scan.rs
fdb/src/exec/query/: insert.rs  object_create.rs  object_select.rs  select.rs
fdb/src/exec/query/object/: create.rs  select.rs
fdb/src/exec/query/table/: delete.rs  insert.rs  linear_scan.rs  select.rs  seq_scan.rs  sort.rs  update.rs
fdb/src/exec/util/: cmp.rs  macros.rs  size_buf.rs
fdb/src/io/: bootstrap.rs  cache.rs  disk_manager.rs  pager.rs
fdb/src/pager/: cache.rs
fdb/src/util/: io.rs
fdb/tests/: delete.rs  insert_select.rs  sort.rs  update.rs
fdb/tests/test_utils/: mod.rs
scripts/: setup.sh
src/: catalog.rs  config.rs  disk_manager.rs  error.rs  exec.rs  ioutil.rs  main.rs  page.rs  pager.rs
src/catalog/: column.rs  object.rs  page.rs  table_schema.rs  ty.rs
src/catalog/page/: first.rs  heap.rs
src/exec/: common.rs  insert.rs  select.rs  serde.rs  value.rs
src/page/: catalog_data.rs  first.rs  heap.rs  main_header_data.rs  schema_data.rs
