[package]
name = "fdb"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait = "0.1.65"
buff = { path = "../buff" }
dashmap = "5.4.0"
futures-util = { version = "0.3.27", default-features = false }
moka = { version = "0.10.0", features = ["future"] }
thiserror = "1.0.38"
tokio = { workspace = true, features = ["fs", "io-util", "sync"] }
tracing.workspace = true
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

[dev-dependencies]
tracing-subscriber.workspace = true

[dev-dependencies.tokio]
workspace = true
features = ["fs", "io-util", "sync", "time", "macros", "rt-multi-thread"]
